--- a/templates/work_dump.html
+++ b/templates/work_dump.html
@@ -1,25 +1,25 @@
 {% extends "base.html" %}
 {% block title %}Work {{work.id}} - {{work.title}}{% endblock %}
 {% block content %}
-<h2>{{work.id}} - {{work.title}}</h2>
+<h2>Work #{{work.id}} - {{work.title}}</h2>
 
 <h3>Work records</h3>
 
 <ol>
  {% for workrecord in work.work_records %}
-  <li><a href="#{{loop.index}}">{{workrecord.title}} - {{workrecord.primary_identifier}} {{workrecord.languages}}</a></li>
+  <li><a href="#{{loop.index}}">{{workrecord.title}} - {{workrecord.primary_identifier.__repr__().decode("utf8")}} {{workrecord.languages}}</a></li>
  {% endfor %}
 </ol>
 
 <ol>
  {% for workrecord in work.work_records %}
   <li>
-   <a name="{{loop.index}}"><b>{{workrecord.title}}</b> - {{workrecord.primary_identifier}} {{workrecord.languages}}</b></a>
+   <a name="{{loop.index}}"><b>{{workrecord.title}}</b> - {{workrecord.primary_identifier.__repr__().decode("utf8")}} {{workrecord.languages}}</b></a>
 
    <ul>
    {% for e in workrecord.primary_identifier.equivalencies %}
     <li>
-     {{ e.output }}
+     {{ e.output.__repr__().decode("utf8") }} <b>{{ e.strength }}</b>
      <ul>
       {% for oclc_work in e.output.primarily_identifies %}
        <li>
@@ -28,16 +28,16 @@
         <ul>
          {% for oclc_e in oclc_work.primary_identifier.equivalencies %}
 	  <li>
-           {{ oclc_e.output }} 
+           {{ oclc_e.output }} <b>{{ oclc_e.strength }}</b>
 	   {% for wr2 in oclc_e.output.primarily_identifies %} 
              {{ wr2.title }} / {{wr2.publisher}} / {{wr2.summary}}
            {% endfor %}
            {% for r in oclc_e.output.resources %}
-            {% if r.mirrored and r.media_type.startswith("image") %}
-             <p><img src="{{r.mirrored_path % dict(content_cafe_mirror="http://localhost:8000/")}}"/>
+            {% if r.mirrored and r.media_type and r.media_type.startswith("image") %}
+             <p><blockquote><img src="{{r.mirrored_path % dict(content_cafe_mirror="http://localhost:8000/")}}"/></blockquote>
             {% endif %}
-            {% if r.rel == "description" and r.content %}
-             <p>{{ r.content }}</p>
+            {% if r.rel == "http://schema.org/description" and r.content %}
+             <p><blockquote>{{ r.content }}</blockquote></p>
             {% endif %}
            {% endfor %}
 
@@ -47,8 +47,8 @@
 	       {{ isbn_e.output }}
 
                {% for r in isbn_e.output.resources %}
-                {% if r.mirrored and r.media_type.startswith("image") %}
-                 <p><img src="{{r.mirrored_path % dict(content_cafe_mirror="http://localhost:8000/")}}"/>
+                {% if r.mirrored and r.media_type and r.media_type.startswith("image") %}
+                 <p><blockquote><img src="{{r.mirrored_path % dict(content_cafe_mirror="http://localhost:8000/")}}"/></blockquote>
                 {% endif %}
                {% endfor %}
 	     </li>
